fix: animation button in collapse

--- a/src/widgets/sidebar/ui/sidebar-header/sidebar-header.module.scss
+++ b/src/widgets/sidebar/ui/sidebar-header/sidebar-header.module.scss
@@ -5,6 +5,18 @@
   padding: 8px;
 }
 
+.hidden {
+  width: 0;
+  opacity: 0;
+  transition: width 0.6s;
+}
+
+.logo {
+  width: 50px;
+  height: auto;
+  object-fit: cover;
+}
+
 .toggleBtn {
   display: flex;
   align-items: center;
@@ -12,10 +24,4 @@
   cursor: pointer;
   padding: 10px 12px;
   color: var(--color-bg-primary);
-}
-
-.logo {
-  width: 50px;
-  height: auto;
-  object-fit: cover;
 }
